--- a/Tabular_data.ipynb
+++ b/Tabular_data.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lets creatw the dictinary\n",
+    "# lets create the dictinary\n",
     "houses_columns = {\n",
     "    'price': [115910.26, 48718.17, 28977.56, 36932.27, 83903.51],\n",
     "    'area in sq_meters': [128.0, 210.0, 58.0, 79.0, 111.0],\n",
